[package]
name = "rust_external_led"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = {version ="0.7.7", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7.3"
embedded-hal = "1.0.0"
panic-halt = "1.0.0"
rp2040-boot2 = "0.3.0"
rp2040-hal = "0.10.2"
rp2040-pac = { version = "0.6.0", features = ["critical-section"] }

