[package]
name = "direct_unsafe_blinky"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = {version ="0.7.7", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7.3"
panic-halt = "1.0.0"
rp2040-boot2 = "0.3.0"
rp2040-pac = { version = "0.6.0", features = ["critical-section"] }

